fixed a bug of the scrollable cards when were on hover, they became cropped on the upper and bottom part. Now it's fixed.

--- a/src/common/section.scss
+++ b/src/common/section.scss
@@ -17,8 +17,8 @@
 
             &.scrollable {
                 flex-wrap: nowrap;
-                overflow: scroll;
-                padding: 0 2rem;
+                overflow-x: scroll;
+                padding: 1rem 2rem;
                 width: auto;
                 justify-content: flex-start;
             }
